Fix CollapsibleContent vertical jumping

--- a/src/components/CollapsibleContent/CollapsibleContent.less
+++ b/src/components/CollapsibleContent/CollapsibleContent.less
@@ -2,27 +2,31 @@
 
 @import '../less-mixins-and-utils.less';
 
-.CollapsibleContentToggle {
-	padding: 0.65em;
-	font-size: 1.1em;
-	font-weight: 600;
-	text-align: center;
-	text-transform: uppercase;
-	border: 2px solid #e9e9e9;
-	border-radius: 0.3125em; // 5px
-	width: 14em;
-	max-width: 100%;
-	margin: 1em auto;
-	.unselectable;
+.CollapsibleContentContainer {
+  margin: 1.1em 0 2.2em 0;
 
-	.ion-chevron-up, .ion-chevron-down {
-	  display: inline-block;
-	  float: left;
-	}
-}
+  .CollapsibleContentToggle {
+    padding: 0.65em;
+    font-size: 1.1em;
+    font-weight: 600;
+    text-align: center;
+    text-transform: uppercase;
+    border: 2px solid #e9e9e9;
+    border-radius: 0.3125em; // 5px
+    width: 14em;
+    max-width: 100%;
+    margin: 0 auto;
+    .unselectable;
 
-.CollapsibleContent {
-  &.in {
-    // Write the collapsible content styles here if needed...
+    .ion-chevron-up, .ion-chevron-down {
+      display: inline-block;
+      float: left;
+    }
+  }
+
+  .CollapsibleContent {
+    &.in {
+      // Write the collapsible content styles here if needed...
+    }
   }
 }
